# cricksaw-analysis

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
cricksaw_analysis/: __init__.py  atlas_utils.py  cricksaw_to_flexilims.py  io.py  main.py  napari_cellfinder_notes.py
cricksaw_analysis/elastix_registration/: atlas_utils.py  pre_processing.py  register_functions.py
docs/: README.md
scripts/: cellfinder_batch.sh  cellfinder_train_batch.sh  redo_preprocessing.m  stitchit_preprocessing.m  stitchit_redo_preprocessing.sh
scripts/analysis/: cell_density.py  coronal_view.py  cricksaw_register.py  cricksaw_register.sh  dorsal_view.py  dorsal_view_batch.sh  dorsal_view_scratch.ipynb  dorsal_view_stack.py  phare_cell_density.py  presynaptic_cell_distribution.py  surface_only_volume.py
scripts/brainglobe/: brainreg_batch.sh  cellfinder_batch.sh
scripts/brainregister_ibl/: brainregister_batch.sh
scripts/preprocessing/: manual_stitch.m  stitchit_preprocessing.m
src/: cell_density.py
